[tool.poetry]
name = "python-airline-support-bot"
version = "0.1.0"
description = "An AI-powered airline support bot that can handle flight-related questions"
authors = ["Adam Nolte <ajnolte12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.76.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
click = "^8.0.0"
opentelemetry-instrumentation-openai = "^0.40.7"
autoblocksai = "^0.0.125"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
airline-bot = "python_airline_support_bot.cli:main"
run_tests = "tests.test_bot:run_tests"

[tool.black]
line-length = 120

[tool.ruff]
lint.select = ["E", "F", "I001"]
line-length = 120

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["python_airline_support_bot"]
